syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ChallengeLineup.proto";

message ChallengeBossClearInfo {
	uint32 highest_difficulty = 1;
	repeated ChallengeLineup lineup_list = 9;
	uint32 buff_two = 13;
	uint32 level = 5;
	uint32 score = 8;
	uint32 buff_one = 11;
}