syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ChallengeBossClearInfo.proto";

message ChallengeBossStats {
	ChallengeBossClearInfo clear_info = 7;
	uint32 attempts = 2;
}