syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "AvatarType.proto";

message ChallengeLineupMember {
	AvatarType avatar_type = 15;
	uint32 id = 4;
	uint32 level = 10;
	uint32 index = 12;
}