syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ChallengeMemoryClearInfo.proto";

message ChallengeMemoryStats {
	ChallengeMemoryClearInfo clear_info = 5;
	uint32 attempts = 13;
}