syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ChallengeLineup.proto";

message ChallengeStoryClearInfo {
	repeated ChallengeLineup lineup_list = 10;
	uint32 level = 11;
	uint32 highest_difficulty = 5;
	uint32 score = 4;
	uint32 buff_one = 12;
	uint32 buff_two = 2;
}