syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ChallengeStoryClearInfo.proto";

message ChallengeStoryStats {
	ChallengeStoryClearInfo clear_info = 4;
	uint32 attempts = 15;
}