syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ChallengeMemoryStats.proto";
import "ChallengeStoryStats.proto";
import "ChallengeBossStats.proto";

message GetChallengeGroupStatisticsScRsp {
	oneof group_info_case {		ChallengeMemoryStats memory_stats = 12;
		ChallengeStoryStats story_stats = 4;
		ChallengeBossStats boss_stats = 15;
	}
	uint32 retcode = 8;
	uint32 group_id = 14;
}